Monitoring/kube-state-metrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-state-metrics
  namespace: kube-system
  labels:
    app: kube-state-metrics
  annotations:
    #nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    # type of authentication
    #nginx.ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # name of the secret that contains the user/password definitions
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    # custom max body size for file uploading like backing image uploading
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: nginx
  rules:
  - host: kube-wopr.sindria.corp
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: kube-state-metrics
              port:
                number: 8080
  #tls:
  #- hosts:
  #  - kube-wopr.sindria.corp
  #  secretName: tls-sindriaorg
